; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ssb/extr_driver_gige.c_gige_pcicfg_read32.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ssb/extr_driver_gige.c_gige_pcicfg_read32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssb_gige = type { i32 }

@SSB_GIGE_PCICFG = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ssb_gige*, i32)* @gige_pcicfg_read32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gige_pcicfg_read32(%struct.ssb_gige* %0, i32 %1) #0 {
  %3 = alloca %struct.ssb_gige*, align 8
  %4 = alloca i32, align 4
  store %struct.ssb_gige* %0, %struct.ssb_gige** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp uge i32 %5, 256
  %7 = zext i1 %6 to i32
  %8 = call i32 @BUG_ON(i32 %7)
  %9 = load %struct.ssb_gige*, %struct.ssb_gige** %3, align 8
  %10 = load i64, i64* @SSB_GIGE_PCICFG, align 8
  %11 = load i32, i32* %4, align 4
  %12 = zext i32 %11 to i64
  %13 = add nsw i64 %10, %12
  %14 = call i32 @gige_read32(%struct.ssb_gige* %9, i64 %13)
  ret i32 %14
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @gige_read32(%struct.ssb_gige*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
